<resources>
    <string name="app_name">Reservation</string>
    <string name="select_table">Select table</string>
    <string name="confirm">Confirm</string>
    <string name="smoking_area">Smoking area</string>
    <string name="message">message</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="size_of_group">Size of group</string>
    <string name="reset">Reset</string>
</resources>
